--- a/setup.cfg
+++ b/setup.cfg
@@ -17,4 +17,4 @@ python_version = 3.8
 warn_return_any = True
 warn_unused_configs = True
 warn_unused_ignores = True
-platform = win32
+allow_untyped_defs = False
