--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,6 @@ warn_return_any = True
 warn_unused_configs = True
 warn_unused_ignores = True
 allow_untyped_defs = False
+
+[mypy-tests.*]
+allow_untyped_defs = True
