--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pyparsing==2.4.7
 pyperclip==1.8.1
 pytest==6.2.1
 pytest-cov==2.11.1
+pytest-mock==3.5.1
 regex==2020.11.13
 requests==2.25.1
 soupsieve==2.1
