--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ pytest-cov==2.11.1
 pytest-mock==3.5.1
 regex==2020.11.13
 requests==2.25.1
+requests-mock==1.8.0
+six==1.15.0
 soupsieve==2.1
 toml==0.10.2
 typed-ast==1.4.2
