--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ requests-mock==1.9.3
 six==1.16.0
 soupsieve==2.2.1
 toml==0.10.2
+types-requests==2.25.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 wincertstore==0.2
