--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,33 +3,30 @@ name = "euler"
 version = "0.4.0"
 description = "Python implementations of Project Euler solutions."
 authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
-license = "MIT"
 repository = "https://github.com/jcthomassie/euler"
+readme = "README.md"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-numpy = "^1.21.0"
+numpy = "^1.23.4"
 pyperclip = "^1.8.2"
-requests = "^2.25.1"
-beautifulsoup4 = "^4.9.3"
+requests = "^2.28.1"
+beautifulsoup4 = "^4.11.1"
 
-[tool.poetry.dev-dependencies]
-black = "^21.6b0"
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
 isort = "^5.9.1"
-flake8 = "^3.9.2"
-mypy = "^0.910"
+flake8 = "^5.0.4"
+mypy = "^0.982"
 types-requests = "^2.25.0"
-pytest = "^6.2.4"
-pytest-cov = "^2.12.1"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
 pytest-mock = "^3.6.1"
 requests-mock = "^1.9.3"
 
 [tool.poetry.scripts]
 euler = 'euler.__main__:main'
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 multi_line_output = 3
@@ -51,3 +48,7 @@ warn_return_any = true
 warn_unused_configs = true
 warn_unused_ignores = true
 allow_untyped_defs = false
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
