--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,48 +3,56 @@ name: tests
 
 on:
   push:
-    branches:
-    - master
+    branches: [ main, ci-* ]
     paths-ignore:
     - .gitignore
     - README.md
 
   pull_request:
-    branches:
-    - master
+    branches: [ main ]
     paths-ignore:
     - .gitignore
     - README.md
 
 jobs:
   tests:
-
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Setup python
-      uses: actions/setup-python@v2
+    - name: Checkout euler
+      uses: actions/checkout@v3
+    - name: Install python
+      uses: actions/setup-python@v4
       with:
         python-version: "3.11"
-    - name: Install package [pip]
-      run: |
-        python -m pip install --upgrade pip wheel
-        pip install -r requirements.txt
-        pip install -e .[dev]
-    - name: Style check [isort]
-      run: isort . --check
-    - name: Style check [black]
-      run: black . --check
-    - name: Style check [flake8]
-      run: flake8 .
-    - name: Type check [mypy]
-      run: mypy .
-    - name: Unit tests [pytest]
-      run: pytest --cov-report=xml --cov=euler
+    - name: Install poetry
+      uses: snok/install-poetry@v1
+      with:
+        version: latest
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
+    - name: Load venv cache
+      uses: actions/cache@v3
+      with:
+        path: .venv
+        key: ${{ hashFiles('**/poetry.lock') }}
+    - name: Install euler
+      run: poetry install --no-interaction
+
+    - name: isort
+      run: poetry run isort . --check
+    - name: black
+      run: poetry run black . --check
+    - name: flake8
+      run: poetry run flake8 .
+    - name: mypy
+      run: poetry run mypy .
+    - name: pytest
+      run: poetry run pytest --cov-report=xml --cov=./
+
     - name: Upload codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
