--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
     - name: mypy
       run: poetry run mypy .
     - name: pytest
-      run: poetry run pytest --cov-report=xml --cov=./
+      run: poetry run pytest --color=yes --cov-report=xml --cov=./
 
     - name: Upload codecov
       uses: codecov/codecov-action@v3
