--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,22 +9,22 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-numpy = "^1.23.4"
+numpy = "^1.25.2"
 pyperclip = "^1.8.2"
-requests = "^2.28.1"
-beautifulsoup4 = "^4.11.1"
+requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.10.0"
-isort = "^5.9.1"
-flake8 = "^5.0.4"
-flake8-pyproject = "^1.1.0.post0"
-mypy = "^0.982"
-types-requests = "^2.25.0"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
-pytest-mock = "^3.6.1"
-requests-mock = "^1.9.3"
+black = "^23.7.0"
+isort = "^5.12.0"
+flake8 = "^6.1.0"
+flake8-pyproject = "^1.2.3"
+mypy = "^1.4.1"
+types-requests = "^2.31.0.2"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
+requests-mock = "^1.11.0"
 
 [tool.poetry.scripts]
 euler = 'euler.__main__:main'
