--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,28 +16,25 @@ beautifulsoup4 = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
-isort = "^5.12.0"
-flake8 = "^6.1.0"
-flake8-pyproject = "^1.2.3"
 mypy = "^1.4.1"
 types-requests = "^2.31.0.2"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
 requests-mock = "^1.11.0"
+ruff = "^0.0.282"
 
 [tool.poetry.scripts]
 euler = 'euler.__main__:main'
 
-[tool.isort]
-src_paths = ["euler", "tests"]
-profile = "black"
+[tool.ruff]
+target-version = "py311"
+select = ["E", "F", "W", "I001"]
+ignore = ["E501"]
+src = ["euler", "tests"]
 
-[tool.flake8]
-max-line-length = 88
-ignore = "E203, E266, E501, W503"
-select = "B,C,E,F,W,T4,B9"
-exclude = ["__pycache__", ".*"]
+[tool.ruff.isort]
+known-first-party = ["euler"]
 
 [tool.mypy]
 python_version = "3.11"
